--- a/assets/style.css
+++ b/assets/style.css
@@ -1,14 +1,18 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900");
+@import url("https://fonts.googleapis.com/css?family=roboto:100,300,400,700,900");
 body {
   background-color: #F3F6F8;
-  font-family: 'Lato', sans-serif; }
+  font-family: 'Roboto', sans-serif; }
 
 a {
-  transition: all .2s; }
+  -webkit-transition: all .2s;
+  -o-transition: all .2s;
+  transition: all .2s;
+  text-decoration: none;
+  font-weight: 400; }
 
 #wpbody-content .wrap > h1 {
-  font-size: 2.5em;
-  font-weight: 300;
+  font-size: 2.25em;
+  font-weight: 600;
   margin-bottom: 0.5rem; }
 
 .edit-php #wpbody-content .wrap,
@@ -16,26 +20,127 @@ a {
 .users-php #wpbody-content .wrap,
 .edit-comments-php #wpbody-content .wrap,
 .options-general-php #wpbody-content .wrap,
-.plugins-php #wpbody-content .wrap {
-  max-width: 1150px;
+.plugins-php #wpbody-content .wrap,
+.post-type-product #wpbody-content .wrap,
+.post-new-php #wpbody-content .wrap,
+.user-edit-php #wpbody-content .wrap,
+.profile-php #wpbody-content .wrap,
+.taxonomy-category #wpbody-content .wrap,
+.woocommerce_page_wc-settings #wpbody-content .wrap,
+.woocommerce_page_wc-status #wpbody-content .wrap {
+  max-width: 1000px;
   margin: 10px auto;
   padding-right: 1rem; }
 
+#adminmenu, #adminmenu .wp-submenu, #adminmenuback, #adminmenuwrap {
+  width: 200px; }
+
+#wpcontent, #wpfooter {
+  margin-left: 200px; }
+
+#adminmenu .wp-submenu {
+  left: 200px; }
+
 div.postbox {
   border: 0;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); }
+  -webkit-box-shadow: 0 0 0 1px rgba(63, 63, 68, 0.05), 0 1px 3px 0 rgba(63, 63, 68, 0.15);
+  box-shadow: 0 0 0 1px rgba(63, 63, 68, 0.05), 0 1px 3px 0 rgba(63, 63, 68, 0.15);
+  border-radius: 4px; }
   div.postbox .hndle {
-    text-transform: uppercase;
-    font-weight: 400;
+    font-weight: 600;
     letter-spacing: 1px;
     padding: 1rem;
-    opacity: .75; }
+    opacity: .75;
+    border-bottom: 0;
+    padding: 14px 12px !important; }
+
+.postbox .handlediv {
+  height: 45px;
+  width: 45px;
+  opacity: .5; }
 
 .row-title {
   color: inherit; }
 
+#titlediv #title {
+  height: 2.7em; }
+
+#titlediv #title-prompt-text {
+  padding: 20px 10px; }
+
 #wp-content-editor-tools {
   background-color: #F3F6F8; }
+
+#edit-slug-buttons {
+  margin-left: .5rem; }
+
+#postdivrich {
+  background-color: #fff;
+  padding: 1rem;
+  border: 0;
+  -webkit-box-shadow: 0 0 0 1px rgba(63, 63, 68, 0.05), 0 1px 3px 0 rgba(63, 63, 68, 0.15);
+  box-shadow: 0 0 0 1px rgba(63, 63, 68, 0.05), 0 1px 3px 0 rgba(63, 63, 68, 0.15);
+  border-radius: 4px; }
+
+#minor-publishing-actions {
+  padding: 0.5rem 1rem;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd; }
+
+div.mce-toolbar-grp,
+.html-active .switch-html,
+.tmce-active .switch-tmce,
+.quicktags-toolbar,
+.alternate,
+.striped > tbody > :nth-child(odd),
+ul.striped > :nth-child(odd) {
+  background-color: #FAFBFC !important; }
+
+#postimagediv img {
+  max-width: 350px !important;
+  margin: auto !important;
+  border-radius: 5px;
+  overflow: hidden;
+  border: none !important;
+  display: block; }
+
+#postimagediv .inside a {
+  min-height: 200px;
+  text-align: center;
+  margin: auto;
+  background: center no-repeat url("./images/photos.svg");
+  background-size: 70% 70%; }
+
+#edit-slug-box {
+  margin-bottom: .5rem; }
+
+#wp-content-editor-tools {
+  background-color: #fff; }
+
+#major-publishing-actions,
+#post-status-info,
+html #woocommerce-order-items .wc-order-data-row,
+html #woocommerce-order-items .woocommerce_order_items_wrapper table.woocommerce_order_items thead th,
+html ul.order_notes li.system-note .note_content {
+  background-color: #F9FAFB; }
+
+#publish {
+  background-image: url("./images/desktop.svg");
+  padding: 2px 15px 2px 2.5rem;
+  background-position: 10px center;
+  background-size: 20% 65%;
+  background-repeat: no-repeat;
+  height: auto;
+  font-weight: 600; }
+
+.form-table {
+  display: block;
+  background-color: #fff;
+  padding: 1rem;
+  border: 0;
+  -webkit-box-shadow: 0 0 0 1px rgba(63, 63, 68, 0.05), 0 1px 3px 0 rgba(63, 63, 68, 0.15);
+  box-shadow: 0 0 0 1px rgba(63, 63, 68, 0.05), 0 1px 3px 0 rgba(63, 63, 68, 0.15);
+  border-radius: 4px; }
 
 .postbox#commentsdiv,
 .postbox#slugdiv,
@@ -51,4 +156,87 @@ div.postbox {
   display: none !important; }
 
 .fl-settings-heading img {
+  display: none !important; }
+
+#jetpack_summary_widget .button,
+#jetpack_summary_widget .akismet {
+  display: none; }
+
+#woocommerce-order-notes {
+  padding-bottom: 1rem; }
+
+html #woocommerce-order-items .woocommerce_order_items_wrapper table.woocommerce_order_items tbody tr:first-child td {
+  border-top: 8px solid  #F9FAFB; }
+
+html ul.order_notes li.system-note .note_content::after {
+  border-color: #F9FAFB transparent; }
+
+html #woocommerce_dashboard_recent_reviews .star-rating span::before {
+  color: #e7b933; }
+
+html table.wc-shipping-classes td.wc-shipping-zone-method-blank-state li,
+html table.wc-shipping-classes td.wc-shipping-zone-method-blank-state p,
+html table.wc-shipping-classes td.wc-shipping-zones-blank-state li,
+html table.wc-shipping-classes td.wc-shipping-zones-blank-state p,
+html table.wc-shipping-zone-methods td.wc-shipping-zone-method-blank-state li,
+html table.wc-shipping-zone-methods td.wc-shipping-zone-method-blank-state p,
+html table.wc-shipping-zone-methods td.wc-shipping-zones-blank-state li,
+html table.wc-shipping-zone-methods td.wc-shipping-zones-blank-state p,
+html table.wc-shipping-zones td.wc-shipping-zone-method-blank-state li,
+html table.wc-shipping-zones td.wc-shipping-zone-method-blank-state p,
+html table.wc-shipping-zones td.wc-shipping-zones-blank-state li,
+html table.wc-shipping-zones td.wc-shipping-zones-blank-state p {
+  color: inherit; }
+
+html table.wc-shipping-classes td.wc-shipping-zone-method-blank-state .button-primary,
+html table.wc-shipping-classes td.wc-shipping-zones-blank-state .button-primary,
+html table.wc-shipping-zone-methods td.wc-shipping-zone-method-blank-state .button-primary,
+html table.wc-shipping-zone-methods td.wc-shipping-zones-blank-state .button-primary,
+html table.wc-shipping-zones td.wc-shipping-zone-method-blank-state .button-primary,
+html table.wc-shipping-zones td.wc-shipping-zones-blank-state .button-primary,
+html .woocommerce-BlankState a.button-primary,
+html .woocommerce-BlankState button.button-primary,
+html .woocommerce-message a.button-primary,
+html .woocommerce-message button.button-primary {
+  background-color: #0073aa;
+  border: 0;
+  text-shadow: none;
+  -webkit-box-shadow: 0;
+  box-shadow: 0; }
+
+html table.wc-shipping-classes td.wc-shipping-zone-method-blank-state,
+html table.wc-shipping-classes td.wc-shipping-zones-blank-state,
+html table.wc-shipping-zone-methods td.wc-shipping-zone-method-blank-state,
+html table.wc-shipping-zone-methods td.wc-shipping-zones-blank-state,
+html table.wc-shipping-zones td.wc-shipping-zone-method-blank-state,
+html table.wc-shipping-zones td.wc-shipping-zones-blank-state {
+  background-color: #F9FAFB !important; }
+
+html table.wc-shipping-classes td.wc-shipping-zone-method-blank-state::before,
+html table.wc-shipping-classes td.wc-shipping-zones-blank-state::before,
+html table.wc-shipping-zone-methods td.wc-shipping-zone-method-blank-state::before,
+html table.wc-shipping-zone-methods td.wc-shipping-zones-blank-state::before,
+html table.wc-shipping-zones td.wc-shipping-zone-method-blank-state::before,
+html table.wc-shipping-zones td.wc-shipping-zones-blank-state::before {
+  color: #e8ebee; }
+
+html .status-enabled::before {
+  color: #0073aa; }
+
+.wpseo-tab-video-container,
+.wpseo-metabox-buy-premium,
+.wpseo-tab-add-keyword {
+  display: none !important; }
+
+html body #wpseo-dashboard-overview .onpage .button.landing-page {
+  border-color: #1e567a #1b336f #1b426f;
+  color: #fff;
+  background: #2844a4;
+  -webkit-box-shadow: none;
+  box-shadow: none; }
+
+#add_pod_button,
+#wp-admin-bar-wp-logo,
+#wp-admin-bar-search,
+#mceu_13 {
   display: none !important; }
